--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,28 @@
+/*header*/
 body {
-	/*background-color: greenyellow;*/
 	height: 2000px;
-	/*padding-top: 56px;*/
 }
 .section1 {
+	display: inline-block;
 	margin-top: 56px;
 }
-/*header*/
 .header {
-	background-color: lightgrey;
+	position: fixed	;
+	background-color: black;
 	padding: 20px;
-	position: fixed;
 	width: 100%;
 	top: 0;
 	left: 0;
-	z-index: 20;
+	z-index: 100;
 }
 .logo {
 	display: inline-block;
 	margin-right: 50px;
 }
 .nav {
-	display: inline-block
+	display: inline-block;
 }
-.nav-li	{
+.nav-li {
 	display: inline-block;
 	margin-right: 20px;
 }
@@ -32,81 +31,95 @@ body {
 	width: 300px;
 	background-color: aqua;
 }
-/*section-2*/
-.section-2 {
+/*section2*/
+.section2 {
+	display: inline-block;
 	margin-top: 20px;
 }
-.box-wrapper {
+.wrapper-box {
 	width: 400px;
 	height: 400px;
 	background-color: green;
 	position: relative;
 }
-.box-1 {
-	width: 150px;
-	height: 150px;
-	background-color: yellow;
+.box1 {	
+	width: 200px;
+	height: 200px;
+	background-color: red;
 	position: absolute;
-	right: 30px;
-	bottom: 40px;
+	right: -30px;
+	bottom: 50px;
 	z-index: 5;
 }
-.box-2 {
-	width: 150px;
-	height: 150px;
-	background-color: black;
+.box2 {	
+	width: 200px;
+	height: 200px;
+	background-color: yellow;
 	position: absolute;
 	right: 80px;
 	bottom: 100px;
-	z-index: 6;
 }
-.box-3 {
-	width: 150px;
-	height: 150px;
-	background-color: red;
+.box3 {	
+	width: 100px;
+	height: 100px;
+	background-color: blueviolet;
 	position: absolute;
 	top: 50px;
 	right: 150px;
-	z-index: 7;
 }
-/*section3 center*/
-.blue-box {
+/*section3*/
+.section3 {
+	display: inline-block;
+	margin-top: 20px;
+}
+.wrapper {
 	width: 400px;
-	height: 400px;
+	height: 500px;
 	background-color: blue;
 	position: relative;
 }
-.yellow-box {
+.boxb {
+	width: 200px;
+	height: 200px;
+	background-color: blue;
+	position: absolute;
+}
+.boxy {
 	width: 100px;
 	height: 100px;
 	background-color: yellow;
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%,-50%);
+	text-align: center;
 }
 /*section4*/
 .section4 {
 	margin-top: 20px;
 }
-.image-wrapper{
+.image {
 	position: relative;
-	/*width: 800 px;*/
+	width: 400px;
 }
-.img-text {
+.imaaage{
+	width: 100%;
+}
+.image-text {
 	position: absolute;
 	top: 50px;
 	right: 100px;
 }
-.image {
-	width: 95%;
-}
 /*section5*/
-.icon {
+.section5 {
+	margin-top: 20px;
+}
+.chat {
 	width: 60px;
 }
-.icon-wrapper {
+.chat1 {
 	position: fixed;
 	right: 30px;
 	bottom: 50px;
+	width: 50px;
 }
